--- a/task_2.1..ipynb
+++ b/task_2.1..ipynb
@@ -16,19 +16,23 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "m8HLjZez3BJa",
-        "outputId": "eba9c236-b68c-487d-9001-b7e81fe8d593"
+        "id": "FhYGGSCyGMya",
+        "outputId": "7c6cc4f4-36bd-4275-8024-0ad45f0fb249"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "[4, 6, 2, 1, 9, 63, -134, 566] -> max = 566, min = -134\n",
+            "[-52, 56, 30, 29, -54, 0, -110] -> max = 56, min = -110\n",
+            "[42, 54, 65, 87, 0] -> max = 87, min = 0\n",
+            "[5] -> max = 5, min = 5\n",
             "[-134, 1, 2, 4, 6, 9, 63, 566] -> max = 566, min = -134\n",
             "[-110, -54, -52, 0, 29, 30, 56] -> max = 56, min = -110\n",
             "[0, 42, 54, 65, 87] -> max = 87, min = 0\n",
@@ -61,6 +65,23 @@
         "    [42, 54, 65, 87, 0],\n",
         "    [5]\n",
         "]\n",
+        "\n",
+        "for arr in data:\n",
+        "    def minimum(arr):\n",
+        "        min = arr[0]\n",
+        "        for i in arr:\n",
+        "            if i < min:\n",
+        "                min = i\n",
+        "        return min\n",
+        "    def maximum(arr):\n",
+        "        max = arr[0]\n",
+        "        for i in arr:\n",
+        "            if i > max:\n",
+        "                max = i\n",
+        "        return max\n",
+        "    print (arr, f'-> max = {maximum(arr)}, min = {minimum(arr)}')\n",
+        "\n",
+        "# Менее удачное решение:\n",
         "\n",
         "for arr in data:\n",
         "    def minimum(arr):\n",
