--- a/task_2_2.ipynb
+++ b/task_2_2.ipynb
@@ -16,21 +16,21 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lA8f_0QNCWwg",
-        "outputId": "00918b64-f9ab-4127-c658-8a564ca851df"
+        "outputId": "f87d77a5-7438-4f6e-b763-44362872278a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Введите номер месяца: 4\n",
-            "месяц 4 (апрель) является частью второго квартала\n"
+            "Введите номер месяца: 9\n",
+            "месяц 9 (сентябрь) является частью третьего квартала\n"
           ]
         }
       ],
@@ -46,7 +46,7 @@
         "def quarter_of(month):\n",
         "    pass\n",
         "\n",
-        "num = int(input('Введите номер месяца: '))\n",
+        "# num = int(input('Введите номер месяца: '))\n",
         "\n",
         "month = {\n",
         "    1: '(январь)',\n",
@@ -71,11 +71,11 @@
         "}\n",
         "\n",
         "def quarter_of(month):\n",
+        "    num = int(input('Введите номер месяца: '))\n",
         "    for i in month:\n",
-        "        i = (num + 2) // 3 # Формула рассчёта по дате для Excel\n",
-        "    return quarter[i]\n",
-        "\n",
-        "print(f'месяц {num} {month[num]} является частью {quarter_of(month)} квартала')"
+        "        i = (num + 2) // 3 # Формула бухгалтера для рассчёта по дате в Excel\n",
+        "    return (f'месяц {num} {month[num]} является частью {quarter[i]} квартала')\n",
+        "print(quarter_of(month))"
       ]
     }
   ]
