--- a/task_2_3.ipynb
+++ b/task_2_3.ipynb
@@ -64,7 +64,7 @@
         "    num = int(input('Введите цифры от 0 до 9: '))\n",
         "    for i in number:\n",
         "        i = num\n",
-        "    return (f'switch_it_up({num}) -> {number.get(i)}')\n",
+        "    return (f'switch_it_up({i}) -> {number.get(i)}')\n",
         "\n",
         "print(switch_it_up(number))"
       ]
