--- a/task_2_2.ipynb
+++ b/task_2_2.ipynb
@@ -16,28 +16,28 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lA8f_0QNCWwg",
-        "outputId": "f87d77a5-7438-4f6e-b763-44362872278a"
+        "outputId": "7046c682-e92b-4f94-de2c-b37b242352ef"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Введите номер месяца: 9\n",
-            "месяц 9 (сентябрь) является частью третьего квартала\n"
+            "Введите номер месяца: 7\n",
+            "месяц 7 (июль) является частью третьего квартала\n"
           ]
         }
       ],
       "source": [
         "# Задача 2.2.\n",
         "\n",
-        "# Напишите функцию, которая возвращает номер квартал по номеру месяца\n",
+        "# Напишите функцию, которая возвращает номер квартала по номеру месяца\n",
         "# Например:\n",
         "# месяц 2 (февраль) является частью первого квартала;\n",
         "# месяц 6 (июнь) является частью второго квартала;\n",
@@ -45,8 +45,8 @@
         "\n",
         "def quarter_of(month):\n",
         "    pass\n",
-        "\n",        
-        "month = {\n",
+        "\n",
+        "year = {\n",
         "    1: '(январь)',\n",
         "    2: '(февраль)',\n",
         "    3: '(март)',\n",
@@ -69,10 +69,9 @@
         "}\n",
         "\n",
         "def quarter_of(month):\n",
-        "    num = int(input('Введите номер месяца: '))\n",
-        "    for i in month:\n",
-        "        i = (num + 2) // 3 # Формула бухгалтера для рассчёта по дате в Excel\n",
-        "    return (f'месяц {num} {month[num]} является частью {quarter[i]} квартала')\n",
+        "    month = int(input('Введите номер месяца: '))\n",
+        "    num_quarter = (month + 2) // 3 # Формула бухгалтера для рассчёта по дате в Excel\n",
+        "    return (f'месяц {month} {year[month]} является частью {quarter[num_quarter]} квартала')\n",
         "print(quarter_of(month))"
       ]
     }
