--- a/task_2_3.ipynb
+++ b/task_2_3.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0V376HsOTCny",
-        "outputId": "f108c8b3-b73b-4947-86f7-1ab117cd9cad"
+        "outputId": "b3f2c236-9578-461e-c5ce-32cbf79378bf"
       },
       "outputs": [
         {
@@ -47,7 +47,7 @@
         "def switch_it_up(number):\n",
         "    pass\n",
         "\n",
-        "number = {\n",
+        "numbers_0_9 = {\n",
         "    0: 'ноль',\n",
         "    1: 'один',\n",
         "    2: 'два',\n",
@@ -61,10 +61,8 @@
         "}\n",
         "\n",
         "def switch_it_up(number):\n",
-        "    num = int(input('Введите цифры от 0 до 9: '))\n",
-        "    for i in number:\n",
-        "        i = num\n",
-        "    return (f'switch_it_up({i}) -> {number.get(i)}')\n",
+        "    number = int(input('Введите цифры от 0 до 9: '))\n",
+        "    return (f'switch_it_up({number}) -> {numbers_0_9.get(number)}')\n",
         "\n",
         "print(switch_it_up(number))"
       ]
