--- a/task_4_1/task_4_1.ipynb
+++ b/task_4_1/task_4_1.ipynb
@@ -68,73 +68,6 @@
       "cell_type": "code",
       "source": [
         "# Вывести информацию о студенте по Student_Id + название школы\n",
-        "# через две функции\n",
-        "\n",
-        "import sqlite3\n",
-        "\n",
-        "def get_connection():\n",
-        "  connection = sqlite3.connect('teachers.db')\n",
-        "  return connection\n",
-        "\n",
-        "def close_connection(connection):\n",
-        "  if connection:\n",
-        "    connection.close()\n",
-        "\n",
-        "def get_school_name(school_id):\n",
-        "  try:\n",
-        "    connection = get_connection()\n",
-        "    cursor = connection.cursor()\n",
-        "    query = \"SELECT * FROM School WHERE School_Id = ?\"\n",
-        "    cursor.execute(query,(school_id,))\n",
-        "    record = cursor.fetchone()\n",
-        "    close_connection(connection)\n",
-        "    return record[1]\n",
-        "  except (Exception, sqlite3.Error) as error:\n",
-        "    print ('Ошибка в получении данных ', error)\n",
-        "\n",
-        "def get_student_data(school_id):\n",
-        "    try:\n",
-        "        connection = get_connection()\n",
-        "        cursor = connection.cursor()\n",
-        "        query = \"SELECT * FROM Students WHERE School_Id = ?\"\n",
-        "        cursor.execute(query,(school_id,))\n",
-        "        records = cursor.fetchall()\n",
-        "        for row in records:\n",
-        "            print (\"ID cтудента:\", row[0])\n",
-        "            print (\"Имя студента:\", row[1])\n",
-        "            print (\"ID школы:\", row[2])\n",
-        "            print (\"Название школы:\", get_school_name(row[2]), \"\\n\")\n",
-        "    except (Exception, sqlite3.Error) as error:\n",
-        "        print ('Ошибка в получении данных ', error)\n",
-        "\n",
-        "get_student_data(1)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IK7zgmorLjxQ",
-        "outputId": "4dd153a1-91c2-4f7e-a43b-f6286d187600"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "ID cтудента: 201\n",
-            "Имя студента: Иван\n",
-            "ID школы: 1\n",
-            "Название школы: Протон \n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Вывести информацию о студенте по Student_Id + название школы\n",
         "# через JOIN\n",
         "\n",
         "import sqlite3\n",
@@ -160,7 +93,7 @@
         "            print (\"ID cтудента:\", row[0])\n",
         "            print (\"Имя студента:\", row[1])\n",
         "            print (\"ID школы:\", row[2])\n",
-        "            print (\"Название школы:\", (row[4]), \"\\n\")\n",
+        "            print (\"Название школы:\", row[4], \"\\n\")\n",
         "    except (Exception, sqlite3.Error) as error:\n",
         "        print ('Ошибка в получении данных ', error)\n",
         "\n",
@@ -171,9 +104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zojpS_bGMGcw",
-        "outputId": "9c68dd8a-11aa-4f11-cc79-8af28d455cdb"
+        "outputId": "d7a2e489-ce27-4b1a-88bd-3da018fb7649"
       },
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
